[project]
name = "pssmlint"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "xiechao06", email = "xiechao06@gmail.com" }
]
dependencies = [
    "apssm @ git+https://github.com/xiechao06/abstract-power-supply-system-models.git",
    "tqdm>=4.66.1",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pdoc>=14.1.0",
    "pytest>=7.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true
